--- a/Dars-3/index.html
+++ b/Dars-3/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    
+<h1>Hello js</h1>
 
-    <script src="./index.js"></script>
+
+
+<script src="./index.js"></script>
 </body>
 </html>
