--- a/Dars-5/index.html
+++ b/Dars-5/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, similique.
-    <button onclick="get(grade)" >seve</button>
-    <script src="./index.js"></script>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, sint. Ullam cum distinctio eos molestiae ipsum
+    esse est labore ipsam, expedita maiores neque, aspernatur eius tempora laudantium ad dolorum quo nobis quam ipsa
+    illo fugiat aperiam numquam. Consectetur, eligendi rem?
+    <button onclick="get()">Login</button>
+<script src="./index.js"></script>
 </body>
+
 </html>
