--- a/Dars-1/index.html
+++ b/Dars-1/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+   <h1>hello js </h1>
+   Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ratione nemo exercitationem, voluptate a adipisci aliquam asperiores eaque, tempore perferendis quisquam veniam vero accusantium reprehenderit dolorem facere, quos eligendi excepturi. Quo commodi eius ipsum nobis perspiciatis nam facilis veniam porro voluptatem voluptates, harum amet? Quas officia obcaecati cupiditate consequuntur quis quod minus doloribus repudiandae eligendi neque, sed et mollitia ipsum blanditiis. Quos cupiditate quis ab similique perferendis pariatur, distinctio odio at voluptatum, unde reprehenderit et fugiat recusandae a consequuntur saepe animi fugit veritatis. Vero dolor blanditiis, accusamus cum et harum, hic maxime unde fugit, fuga quisquam commodi. Consequuntur, quos cumque.
 
 
 
+<script src="./index.js"></script>
 </body>
 </html>
